--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,3 +10,10 @@ app:
     url: https://api.spacexdata.com/v3/launches/upcoming
   launchLibrary:
     url: https://launchlibrary.net/1.4
+
+server.ssl:
+  key-store-type: JKS
+  key-store: classpath:launchaggregator.jks
+  key-store-password: everydayastronaut
+  key-alias: launchaggregator
+  enabled: true
